Fixed UI analysis